# rl-exp

./: .gitignore  crt.ipynb  get_visuals.py  pyproject.toml  simple_policy_gym.ipynb  tst.py
deep_q_learning/: agent.py  dqn.py  hyperparameters.yml
deep_q_learning/runs/FlappyBird-v0_20250917_152734/: flappybird1.pt
q-learning/: frozen_lafe_test.py  frozen_lake_q_table.pkl  mountain-cart.ipynb  mountain_car_Q_learning_policy.pkl  q_learning_imp_sratch.py
